# streamlit-course

./: Untitled.ipynb  langchain_simple_chat_streamlit_ollama.py  langchain_simple_chat_streamlit_openai.py  langchain_simple_memory_chat_streamlit_ollama.py  pyproject.toml
.antigravity/: config.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Perceptron_CNNRNN/: Aduino.py  CNN_CIFAR_10.ipynb  CNN_Fashion_MNIST.ipynb  CNN_MNIST-bluesky.ipynb  CNN_MNIST.ipynb  CNN_MNIST.py  Perceptron-Practice.ipynb  Perceptron-Sigmoid.ipynb  Perceptron-Single.ipynb  Perceptron.ipynb  Perceptron_multi_layer.ipynb  Perceptron_multi_layer_Practice.ipynb  Seq2Seq-Practice-GalaxyBook.ipynb  Seq2Seq-Practice.ipynb  Seq2Seq.ipynb  Seq2Seq_Word.ipynb  Seq2Seq_Word.py  kor.txt  m_perceptron.py  perceptron.py  perceptron_keras.py  preceptron_torch.py  pyproject.toml  seq2seq_word_weights.weights.h5  uv.loc
Perceptron_CNNRNN/.ipynb_checkpoints/: Seq2Seq_Word-Practice-checkpoint.ipynb
Transformer/: Transformer_Korean_Chatbot.ipynb
streamlit/: sidebar.py
streamlit/01_basics/: hello_streamlit.py
streamlit/cheat_sheet/: columns.py  display_code.py  display_data.py  display_progress.py  display_text.py  display_widgets.py  mutate_data.py  placeholder.py
